--- a/src/main/resources/templates/views/reports/rain/showDetailsOfRain.html
+++ b/src/main/resources/templates/views/reports/rain/showDetailsOfRain.html
@@ -39,7 +39,7 @@
 				<hr>
 			<div class="row">
 			<div class="col-4">
-				<p class="text-muted">Usuario: <strong>Jerryezer Torres</strong></p>
+				<p class="text-muted">Usuario: <strong th:text="${rainReport.user}">Jerryezer Torres</strong></p>
 				
 				</div>
 				<div class="col-4">
@@ -47,7 +47,7 @@
 				</div>
 				<div class="col-4">
 				
-				<p class="text-muted">Fecha: <strong>4 de Marzo de 2023</strong></p>
+				<p class="text-muted">Fecha: <strong th:text="${rainReport.date}">4 de Marzo de 2023</strong></p>
 				</div>
 			</div>
 
