--- a/src/main/resources/templates/views/reports/createReport.html
+++ b/src/main/resources/templates/views/reports/createReport.html
@@ -97,7 +97,7 @@
 					<div class="form-check">
 						<input class="form-check-input" type="checkbox" value=""
 							id="flexCheckDefault"> <label class="form-check-label"
-							for="flexCheckDefault"> Cotejar la calibraciÛn de equipos
+							for="flexCheckDefault"> Cotejar la calibraci√≥n de equipos
 						</label>
 					</div>
 					<div class="form-check">
@@ -114,7 +114,7 @@
 					<div class="form-check">
 						<input class="form-check-input" type="checkbox" value=""
 							id="flexCheckDefault"> <label class="form-check-label"
-							for="flexCheckChecked"> Tomar muestras periÛdicas </label>
+							for="flexCheckChecked"> Tomar muestras peri√≥dicas </label>
 					</div>
 					<div class="form-check">
 						<input class="form-check-input" type="checkbox" value=""
