Se agregro la paginacion en los reportes de cieno, lluvia y quimicos

--- a/src/main/resources/templates/template_fragments/navbar.html
+++ b/src/main/resources/templates/template_fragments/navbar.html
@@ -30,7 +30,9 @@
 									Sistema</a></li>
 							<li><a class="dropdown-item" th:href="@{/views/treatmentPlant/plantInformation}">Información de la
 									Planta</a></li>
-							<li><a class="dropdown-item" th:href="@{/views/treatmentPlant/equipmentInformation}">Información de
+							<li><a class="dropdown-item" th:href="@{/views/treatmentPlant/equipmentInformation}">Información General
+									Equipos</a></li>
+							<li><a class="dropdown-item" th:href="@{/views/reports/equipment/equipmentReport}">Información de Todos los 
 									Equipos</a></li>
 							<li><a class="dropdown-item" th:href="@{/views/treatmentPlant/parametersAllowed}">Parámetros
 									Permitidos por EPA</a></li>
