--- a/src/main/resources/templates/views/reports/chemical/chemicalReport.html
+++ b/src/main/resources/templates/views/reports/chemical/chemicalReport.html
@@ -111,7 +111,7 @@
 								<td th:text="${chemicalList.emptyCylinders}">1</td>
 								<td><strong>LECTURA HOY</strong></td>
 								<td th:text="${chemicalList.chlorineReadingToday1}">720</td>
-								<td th:text="${chemicalList.chlorineReadingYesterday2}">2000</td>
+								<td th:text="${chemicalList.chlorineReadingToday2}">2000</td>
 								<td><strong>USO (LBS)</strong></td>
 								<td th:text="${chemicalList.hthConsumption}">0 LBS</td>
 							</tr>
