--- a/src/main/resources/templates/views/reports/sludge/sludgeReport.html
+++ b/src/main/resources/templates/views/reports/sludge/sludgeReport.html
@@ -107,6 +107,27 @@
 	<!-- =========================================================================================================================================== -->
 				
 			<div class=" "> </div>
+							<div class="mt-4">
+			<nav aria-label="Page navigation example">
+				<ul class="pagination justify-content-center">
+					<li class="page-item"
+						th:classappend="${prev == 0 ? 'disabled' : ''}"><a
+						class="page-link"
+						th:href="@{|/views/reports/sludge/sludgeReport?page=${prev}|}"> Anterior</a>
+					</li>
+					<li class="page-item" th:each="page : ${pages}"
+						th:classappend="${current == page ? 'active' : ''}"><a
+						class="page-link"
+						th:href="@{|/views/reports/sludge/sludgeReport?page=${page}|}"
+						th:text="${page}"></a></li>
+					<li class="page-item"
+						th:classappend="${current == last ? 'disabled' : ''}"><a
+						class="page-link"
+						th:href="@{|/views/reports/sludge/sludgeReport?page=${next}|}"> Siguiente</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 		</div>
 	</div>
 	</div>
