--- a/src/main/resources/templates/views/reports/rain/rainReport.html
+++ b/src/main/resources/templates/views/reports/rain/rainReport.html
@@ -74,6 +74,27 @@
 						</tbody>
 					</table>
 				</div>
+		<div class="mt-4">
+			<nav aria-label="Page navigation example">
+				<ul class="pagination justify-content-center">
+					<li class="page-item"
+						th:classappend="${prev == 0 ? 'disabled' : ''}"><a
+						class="page-link"
+						th:href="@{|/views/reports/rain/rainReport?page=${prev}|}"> Anterior</a>
+					</li>
+					<li class="page-item" th:each="page : ${pages}"
+						th:classappend="${current == page ? 'active' : ''}"><a
+						class="page-link"
+						th:href="@{|/views/reports/rain/rainReport?page=${page}|}"
+						th:text="${page}"></a></li>
+					<li class="page-item"
+						th:classappend="${current == last ? 'disabled' : ''}"><a
+						class="page-link"
+						th:href="@{|/views/reports/rain/rainReport?page=${next}|}"> Siguiente</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 
 			</div>
 		</div>
