--- a/src/main/resources/templates/views/treatmentPlant/equipmentInformation.html
+++ b/src/main/resources/templates/views/treatmentPlant/equipmentInformation.html
@@ -12,7 +12,7 @@
 
 	<div class="container">
 		<div class="d-flex justify-content-center">
-			<h1>Equipos de la Planta de Acueductos y Alcantarillados</h1>
+			<h1>Información General de Equipos </h1>
 		</div>
 
 
@@ -37,7 +37,7 @@
 					data-bs-toggle="pill" data-bs-target="#v-pills-settings"
 					type="button" role="tab" aria-controls="v-pills-settings"
 					aria-selected="false">Cámara de Contacto de Cloro
-				</button>
+				</button>			
 			</div>
 			<!--  ------------------------------------------------------------------------------------------ -->
 			<div class="tab-content col-9" id="v-pills-tabContent">
@@ -137,9 +137,8 @@
 				<div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
 					aria-labelledby="v-pills-settings-tab">
 				<div class="rounded float-end">
-						<img th:src="@{/images/camara_contacto_cloro.jpg}" alt="" width="200"
-							height="200">
-					</div>
+						<img th:src="@{/images/camara_contacto_cloro.jpg}" alt="" width="200" height="200">
+				</div>
 					<br>
 					LAS CAMARAS DE CONTACTO DE CLORO..... Lorem ipsum dolor sit amet, consectetur
 					adipisicing elit. Voluptates at consequatur molestiae illo
